--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Exercise Four</string>
+    <string name="start_walking">Start walking</string>
+    <string name="stop_walking">Stop walking</string>
 </resources>
